# emcell

./: .gitignore  Cargo.toml  README.md
cell1/: Cargo.toml  attach.sh  build.rs  expand.rs  run.sh
cell1/.cargo/: config.toml
cell1/src/: critical_section.rs  main.rs  mutex.rs
cell2/: Cargo.toml  build.rs  expand.txt  memory_new.x
cell2/.cargo/: config.toml
cell2/src/: main.rs
cell3/: Cargo.toml  build.rs  memory_at32f407.x
cell3/.cargo/: config.toml
cell3/src/: main.rs
cells_defs/: Cargo.toml  cmd_failed  expand.rs
cells_defs/.cargo/: config.toml
cells_defs/src/: lib.rs
cortex-m-rt-resetmod/: Cargo.toml
cortex-m-rt-resetmod/src/: lib.rs
emcell/: Cargo.toml
emcell-macro/: Cargo.toml  README.md
emcell-macro/src/: defs.rs  lib.rs
emcell/src/: build_rs.rs  device.rs  lib.rs  meta.rs
example/: README.md
example/cell1/: Cargo.toml  attach.sh  build.rs
example/cell1/.cargo/: config.toml
example/cell1/src/: main.rs
example/cell2/: Cargo.toml  attach.sh  build.rs  run.sh
example/cell2/.cargo/: config.toml
example/cell2/src/: main.rs
example/cell3/: Cargo.toml  build.rs  run.sh
example/cell3/.cargo/: config.toml
example/cell3/src/: main.rs
example/cells_defs/: Cargo.toml
example/cells_defs/src/: lib.rs
