[workspace]
resolver = "2"
members = [
"cell1",
"cell2",
"emcell-macro",
"cells_defs",
"emcell"
]
exclude = ["cortex-m-rt-resetmod"]

[profile.release-strip]
inherits = "release"
strip = true
debug = false

[profile.release]
debug = true
codegen-units = 1
lto = true

[profile.dev]
opt-level = 1
lto = true
