[package]
name = "cell1"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
at32f4xx-pac = { version = "0.2.0", features = ["rt", "cortex-m-rt", "at32f407"] }

cells_defs = {path = "../cells_defs"}
cortex-m-rt = { version = "0.7.3" }
defmt = "0.3.6"
panic-halt = "0.2.0"

defmt-rtt = "0.4.0"
critical-section = { version = "1.1.2", features = ["restore-state-bool"] }
cortex-m = "0.7.7"

emcell-macro = {path = "../emcell-macro"}
emcell = { path = "../emcell" }

[build-dependencies]
cells_defs = {path = "../cells_defs"}
emcell = {path = "../emcell", features = ["rt-crate-cortex-m-rt"]}

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
lto = true

[[bin]]
name="cell1"
test=false
bench=false

[patch.crates-io]
cortex-m-rt = { path="../cortex-m-rt-resetmod" }
cortex-m= { version="0.7.7", path="../../../contributions/cortex-m"}

defmt-rtt = { version="0.4.0", path="../../../contributions/defmt/firmware/defmt-rtt"}
defmt = { version="0.3.5", path="../../../contributions/defmt/defmt"}
