[package]
name = "cell1"
version = "0.1.0"
edition = "2021"

[dependencies]
at32f4xx-pac = { version = "0.2.0", features = ["rt", "cortex-m-rt", "at32f407"] }

cells_defs = {path = "../cells_defs"}
cortex-m-rt = { version = "0.7.3" }
defmt = "0.3.6"
panic-halt = "0.2.0"

defmt-rtt = "0.4.0"
critical-section = { version = "1.1.2", features = ["restore-state-bool"] }
cortex-m = "0.7.7"

emcell-macro = {path = "../emcell-macro"}
emcell = { path = "../emcell"}

[build-dependencies]
cells_defs = {path = "../cells_defs"}
emcell = {path = "../emcell", features = ["build-rs"]}

[[bin]]
name="cell1"
test=false
bench=false
