[package]
name = "cell2"
version = "0.1.0"
edition = "2021"

[dependencies]
at32f4xx-pac = { version = "0.2.0", features = ["rt", "cortex-m-rt", "at32f407"] }

cells_defs = {path = "../cells_defs"}
cortex-m-rt = { version = "0.7.3", features = ["noreset"]}
panic-halt = "0.2.0"

emcell-macro = {path = "../emcell-macro"}
emcell = { path = "../emcell" }

[build-dependencies]
cells_defs = {path = "../cells_defs"}
emcell = {path = "../emcell", features = ["build-rs"]}


[[bin]]
name="cell2"
test=false
bench=false