[package]
name = "emcell-macro"
version = "0.0.0"
edition = "2021"
description = "A macro crate for emcell"
license = "MIT"
repository = "https://github.com/skibon02/emcell"
readme = "README.md"
keywords = ["embedded", "microcontroller", "flash", "memory"]
categories = ["embedded", "no-std", "memory-management"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
sha2 = "0.10.8"
syn = { version = "2.0.57", features = ["full"] }

[features]
default = []
