[package]
name = "emcell"
version = "0.0.4"
edition = "2021"
description = "Reserve flash memory regions to safely keep multiple binary and library binaries (cells) on a microcontroller. The cells can call functions from other cells."
license = "MIT"
repository = "https://github.com/skibon02/emcell"
readme = "../README.md"
keywords = ["embedded", "microcontroller", "flash", "memory"]
categories = ["embedded", "no-std", "memory-management"]

[dependencies]
cortex-m = {version = "0.7.7", optional = true }

[features]
default = ["rt-crate-cortex-m-rt"]
build-rs = []
rt-crate-cortex-m-rt = ["cortex-m"]

[lib]
test = false
bench = false
