[package]
name = "cell3"
version = "0.1.0"
edition = "2021"

[dependencies]
at32f4xx-pac = { version = "0.2.0", features = ["rt", "cortex-m-rt", "at32f437"] }

cells_defs = {path = "../cells_defs" }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

emcell-macro = {path = "../../emcell-macro" }
emcell = { path = "../../emcell" }
cortex-m = "0.7.7"

[build-dependencies]
cells_defs = {path = "../cells_defs" }
emcell = {path = "../../emcell", features = ["build-rs"]}


[[bin]]
name="cell3"
test=false
bench=false
